--- a/src/main/webapp/WEB-INF/views/client.html
+++ b/src/main/webapp/WEB-INF/views/client.html
@@ -12,6 +12,123 @@
 		<script src="../../resources/js/bootstrap.min.js"></script>
 		
 	</head>
+
+	<script type="text/javascript">
+
+        var login = false;
+
+        var name;
+        var url;
+
+        function getSession() {
+
+            $.ajax({
+                url : "/getSession.do",
+                type : "get",
+                dataType : "json",
+                async : true,
+                success : function (data) {
+                    if (data != null) {
+
+                        login = true;
+
+//                      设置用户用户的url !!!
+                        $("#img").attr('src',url);
+                        $("div.character").find("span").text(name);
+
+                        console.log(data);
+                    } else {
+                        login = false;
+                    }
+
+                    if (login == false) {
+                        alert("请登录");
+                        location.href = "/toLogin.do";
+                    }
+
+                },
+                error : function (data) {
+                    location.href = "/toLogin.do";
+                }
+            });
+
+        }
+
+        function getClientList() {
+			$.ajax({
+				url : "/client/getClientList.do",
+				type : "get",
+				dataType : "json",
+				success : function (data) {
+					console.log(data);
+
+					$("table").find("tr:gt(0)").remove();
+
+					for (var i in data) {
+					    $("table").append($('<tr>\n' +
+                            '\t\t\t\t\t\t\t<td>' + data[i].number + '</td>\n' +
+                            '\t\t\t\t\t\t\t<td>' + data[i].brief + '</td>\n' +
+                            '\t\t\t\t\t\t\t<td>' + data[i].total + '</td>\n' +
+                            '\t\t\t\t\t\t\t<td>\n' +
+                            '\t\t\t\t\t\t\t\t<a>\n' +
+                            '\t\t\t\t\t\t\t\t\t<i class="icon-pencil"></i>\n' +
+                            '\t\t\t\t\t\t\t\t</a>\n' +
+                            '\t\t\t\t\t\t\t</td>\n' +
+                            '\t\t\t\t\t\t</tr>'));
+					}
+                }
+
+			});
+        }
+        
+        $(function () {
+
+			getSession();
+
+			getClientList();
+			
+			
+			
+			$("#search").click(function () {
+				var text = $("input[name='search']").val().trim();
+
+				if (text == "") {
+				    return;
+				}
+
+				$.ajax({
+					url : "/client/search.do",
+					type :"get",
+					dataType : "json",
+					data : {
+					    text : text
+					},
+					success : function (data) {
+						console.log(data);
+
+                        $("table").find("tr:gt(0)").remove();
+
+                        for (var i in data) {
+                            $("table").append($('<tr>\n' +
+                                '\t\t\t\t\t\t\t<td>' + data[i].number + '</td>\n' +
+                                '\t\t\t\t\t\t\t<td>' + data[i].brief + '</td>\n' +
+                                '\t\t\t\t\t\t\t<td>' + data[i].total + '</td>\n' +
+                                '\t\t\t\t\t\t\t<td>\n' +
+                                '\t\t\t\t\t\t\t\t<a>\n' +
+                                '\t\t\t\t\t\t\t\t\t<i class="icon-pencil"></i>\n' +
+                                '\t\t\t\t\t\t\t\t</a>\n' +
+                                '\t\t\t\t\t\t\t</td>\n' +
+                                '\t\t\t\t\t\t</tr>'));
+                        }
+
+                    }
+				});
+            });
+
+        });
+
+	</script>
+
 	<body>
 		
 		<div class="nav">
@@ -29,7 +146,7 @@
 					
 					<div class="user">
 						<div class="mid-part">
-							<img src="../../resources/image/init.jpg" />
+							<img id="img" src="../../resources/image/init.jpg" />
 							<div class="character">
 								<span>张玮伽</span>
 								<br />
@@ -45,7 +162,7 @@
 					<div class="list">
 						<ul>
 							<li>
-								<a>
+								<a href="/toTask.do">
 									<i class="icon-file"></i>&nbsp;我的待办任务
 								</a>
 							</li>
@@ -88,79 +205,47 @@
 				<div class="middle">
 					<div class="search-part">
 						<div class="left">
-							<span><i class="icon-user"></i> &nbsp;用户管理</span>
+							<span><i class="icon-sitemap"></i> &nbsp;客户管理</span>
 						</div>
 						
-						<div class="right">
+						<div class="client-right">
 							<input type="text" name="search" placeholder="请输入项目名称"/>
-							<a><i class="icon-search"></i></a>
+							<a id="search"><i class="icon-search"></i></a>
+							<button class="btn btn-primary">新增客户</button>
 						</div>
 					</div>
 					
-					<ul class="menu">
-						<li>
-							<a href="">客户管理</a>
-						</li>
-						
-						<li>
-							<a href="">团队管理</a>
-						</li>
-						
-						<li class="active">
-							<a href="">角色管理</a>
-						</li>
-						
-						<li class="add-btn">
-							<button class="btn btn-primary">新增角色</button>
-						</li>
-						
-					</ul>
+				
 					
-					<table>
-						<thead>
-							<tr>
-								<th>序号</th>
-								<th>用户名</th>
-								<th>姓名</th>
-								<th>角色</th>
-								<th>模块</th>
-								<th>操作</th>
-							</tr>
-							
-							<tr>
-								<td>1</td>
-								<td>zhangwj</td>
-								<td>张玮伽</td>
-								<td>系统管理员</td>
-								<td>所有模块</td>
-								<td>
-									<a>
-										<i class="icon-pencil"></i>
-									</a>
-									&nbsp;
-									<a>
-										<i class="icon-trash"></i>
-									</a>
-								</td>
-							</tr>
-							
-							<tr>
-								<td>2</td>
-								<td>songqing</td>
-								<td>松青</td>
-								<td>普通用户</td>
-								<td>所有模块</td>
-								<td>
-									<a>
-										<i class="icon-pencil"></i>
-									</a>
-									&nbsp;
-									<a>
-										<i class="icon-trash"></i>
-									</a>
-								</td>
-							</tr>
-						</thead>
+					<table style="margin-top: 30px;">
+						<tr>
+							<th>客户号</th>
+							<th>客户简称</th>
+							<th>客户全称</th>
+							<th>操作</th>
+						</tr>
+
+						<tr>
+							<td>1001</td>
+							<td>zhangwj</td>
+							<td>张玮伽</td>
+							<td>
+								<a>
+									<i class="icon-pencil"></i>
+								</a>
+							</td>
+						</tr>
+
+						<tr>
+							<td>1002</td>
+							<td>songqing</td>
+							<td>松青</td>
+							<td>
+								<a>
+									<i class="icon-pencil"></i>
+								</a>
+							</td>
+						</tr>
 					</table>
 					
 				</div>
@@ -179,7 +264,7 @@
 						
 						<div class="app-part">
 							<div class="block">
-								<a>
+								<a href="/toClient.do">
 									<div>
 										<i class="icon-adjust"></i>
 									</div>
