--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -20,8 +20,56 @@
 	</style>
 	
 	<script type="text/javascript">
+
+		function getSession() {
+
+		    $.ajax({
+				url : "/getSession.do",
+				type : "get",
+				dataType : "json",
+				async : false,
+				success : function (data) {
+					if (data != null ) {
+					    location.href = "/toMain.do";
+					}
+                }
+			});
+
+        }
+
 		$(function(){
-			
+
+//		    读取session
+		    getSession();
+
+
+			$("button").click(function () {
+				var username = $("input[name='username']").val().trim();
+				var password = $("input[name='password']").val().trim();
+
+				if (username == "" || password == "") {
+				    alert("用户名和密码不能为空");
+				    return ;
+				}
+
+				$.ajax({
+					url : "/login.do",
+					type : "post",
+					dataType : "text",
+					data : {
+					    username : username,
+						password : password
+					},
+					success : function (data) {
+						if (data == 1) {
+						    alert("ok");
+						    location.href = "/toMain.do";
+						} else {
+						    alert("账号密码错误");
+						}
+                    }
+				});
+            });
 		});
 	</script>
 	
@@ -30,9 +78,13 @@
 		
 		
 		<div class="login-body">
-			用户名 ： <input type="text" name="username"/>
+
+			用户名 ：
+			<input type="text" name="username"/>
 			<br>
-			密&nbsp;&nbsp;&nbsp;&nbsp;码 ：<input type="password" name="password" class="middle" />
+
+			密&nbsp;&nbsp;&nbsp;&nbsp;码 ：
+			<input type="password" name="password" class="middle" />
 			<br />
 			
 			<div class="right">
