虚拟路径的bug改了 还有加了通知部分的代码

--- a/src/main/webapp/WEB-INF/views/main.html
+++ b/src/main/webapp/WEB-INF/views/main.html
@@ -83,7 +83,7 @@
                         $("ul.menu").find("li").removeClass("active");
 
 
-                        alert("type : " + type + " cur_type : " + cur_type);
+//                        alert("type : " + type + " cur_type : " + cur_type);
 
 
 						if (cur_type == 1 ) {
@@ -194,6 +194,36 @@
 			});
         }
 
+        function dateTransform(time) {
+            var date = new Date(time);
+            var transDate = date.toLocaleString();
+            return transDate.substring(0 , transDate.indexOf(" "));
+        }
+
+        function getNoticeList() {
+			$.ajax({
+				url : "/notice/getNoticeList.do",
+				type : "get",
+				dataType : "json",
+				success : function (data) {
+					console.log(data);
+
+
+					$(".notice").find("ul li").remove();
+					for (var i in data) {
+
+					    data[i].publish = dateTransform(data[i].publish);
+
+					    $(".notice ul").append($('<li>\n' +
+                            '\t\t\t\t\t\t\t\t<a>\n' +
+                            '\t\t\t\t\t\t\t\t\t'  + data[i].info.substring(0 , 10) + '...' + '\n' +
+                            '\t\t\t\t\t\t\t\t\t<span>' + data[i].publish + '</span>\n' +
+                            '\t\t\t\t\t\t\t\t</a>\n' +
+                            '\t\t\t\t\t\t\t</li>'));
+					}
+                }
+			});
+        }
 
         $(function () {
 
@@ -201,6 +231,7 @@
 
 			getUserList(1);
 
+			getNoticeList();
 
 
 			$("div.character").find("a:eq(0)").click(function () {
