--- a/src/main/webapp/WEB-INF/views/userInfo.html
+++ b/src/main/webapp/WEB-INF/views/userInfo.html
@@ -66,10 +66,44 @@
 			$("#img-name").val($('#file')[0].files[0].name);
         }
 
+
+        function dateTransform(time) {
+            var date = new Date(time);
+            var transDate = date.toLocaleString();
+            return transDate.substring(0 , transDate.indexOf(" "));
+        }
+
+
+        function getNoticeList() {
+            $.ajax({
+                url : "/notice/getNoticeList.do",
+                type : "get",
+                dataType : "json",
+                success : function (data) {
+                    console.log(data);
+
+
+                    $(".notice").find("ul li").remove();
+                    for (var i in data) {
+
+                        data[i].publish = dateTransform(data[i].publish);
+
+                        $(".notice ul").append($('<li>\n' +
+                            '\t\t\t\t\t\t\t\t<a>\n' +
+                            '\t\t\t\t\t\t\t\t\t'  + data[i].info.substring(0 , 10) + '...' + '\n' +
+                            '\t\t\t\t\t\t\t\t\t<span>' + data[i].publish + '</span>\n' +
+                            '\t\t\t\t\t\t\t\t</a>\n' +
+                            '\t\t\t\t\t\t\t</li>'));
+                    }
+                }
+            });
+        }
+
         $(function () {
 
             getSession();
-            
+
+            getNoticeList();
 
             $("#upload-btn").click(function () {
 
